<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>qt_visualization</name>
  <version>0.0.0</version>
  <description>Qt-based visualization for sensor data</description>
  <maintainer email="lihongxin@cplaser.com.cn">hongxin</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>std_msgs</depend>
  <depend>fake_capture_msgs</depend>
  <depend>Qt5Core</depend>
  <depend>Qt5Widgets</depend>
  <depend>Qt5Gui</depend>
  <depend>Qt5Charts</depend>
  <depend>event_bus_cpp</depend>
  <depend>data_processing</depend> <!-- 添加对data_processing包的依赖 -->

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>